# iks_demo

./: .gitignore  README.md  pyproject.toml  sampleModel.keras  setup.py
examples/: DatasetLoader.py  PTModelCreator.py  TFModelCreator.py  TFSampleVisualiser.py  example.py  examples.py  sampleModel.keras
examples/PyTorchSample/: .PTModelCreator.py.swp  PTModelCreator.py  torchMNISTModel.pth
examples/TensorFlowSample/: TFModelCreator.py
mnist_interactive/: example.py  numberCreatorWindow.py  utils.py
src/: interactive_demo.py  our_model.keras  train.py
src/mnist_interactive/: numberCreatorWindow.py  sample.py  sampleModel.keras  utils.py
src/mnist_interactive.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mnist_interactive/backends/: MNIST-Interactive-Model-Analyzer.code-workspace  base_backend.py  pytorch_backend.py  tensorflow_backend.py
src/mnist_interactive/examples/: PTsample.py  TFsample.py  sampleModel.keras  torchMNISTModel.pth
src/mnist_interactive/ui/: canvas.py  numberCreatorWindow.py  sample.py  visualisation.py
